<resources>
    <string name="app_name">MyUTS</string>
    <string name="nama">Mr. X</string>
    <string name="out">Keluar</string>
    <string name="welcome">Welcome to My App</string>
    <string name="inputname">Enter your name</string>
    <string name="inputusername">Enter your username</string>
    <string name="inputpw">Enter your password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="log">Login</string>
</resources>