<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/x"
        android:padding="16dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="30sp"
        android:padding="16dp"/>
    <Button
        android:id="@+id/btnKeluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/out"
        android:padding="16dp"
        android:backgroundTint="@color/blue"/>



</LinearLayout>